2001-11-08  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-queue.c (soup_queue_read_headers_cb): 
	(soup_queue_read_chunk_cb): 
	(soup_queue_read_done_cb): Update to call renamed SoupHandlerEvents.

	* src/libsoup/soup-message.[ch]: Remove
	soup_message_get_request_header, soup_message_set_request_header,
	soup_message_get_response_header,
	soup_message_set_response_header,
	soup_message_add_error_code_handler,
	soup_message_add_error_class_handler,
	soup_message_add_header_handler.
	(redirect_handler): Update for new handler interface.
	(authorize_handler): Ditto.
	(timeout_handler): Impl.
	(soup_message_remove_handler): Impl.
	(soup_message_remove_handler_by_func): Impl.
	(soup_message_remove_handler_by_func_and_data): Impl.
	(soup_message_list_handlers): Impl.

2001-11-08  Alex Graveley  <alex@ximian.com>

	* configure.in: Bump HEAD version to 0.6.99.
	* src/libsoup/soup-private.h (VERSION): Ditto.

2001-11-08  Alex Graveley  <alex@ximian.com>

	* configure.in: Version 0.6.0.
	* src/libsoup/soup-private.h (VERSION): Ditto.

2001-11-08  Alex Graveley  <alex@ximian.com>

	* configure.in (debug_default): Set debug default to "minimum",
	which turns off G_ENABLE_DEBUG (and the ptrace magic) by default.
	To turn back on for a debugging environment, use --enable-debug.

	* src/libsoup/soup-socket-unix.c (SOUP_PTRACE_DETACH): Wrap
	SOUP_PTRACE defines in check for G_ENABLE_DEBUG.

2001-11-08  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-socks.c (socks_data_free): Add cleanup function
	to avoid leaving context/address references around.
	(WSHORT): Use memcpy.
	(soup_socks_read): Pass len as sizeof (buf).
	(soup_socks_error): Add error handler just in case.
	(soup_connect_socks_proxy): Unref the io channel.
	(soup_lookup_dest_addr_cb): Ditto.

2001-11-07  Dan Winship  <danw@ximian.com>

	* src/libsoup/soup-auth.c (ntlm_init): Mark the auth completed
	after sending the response string.
	(ntlm_compare_func): A new NTLM auth doesn't invalidate an